# server

./: .editorconfig  .env.example  Cargo.toml  Dockerfile  README.md
.sqlx/: query-01959e9a4fdc1c6b0d9dbeff80c79a58e0bae2d79af6c2b9e53ead7d9b6e214d.json  query-0333e917f75fd481ec494abb6e2853cb699faca7c34507e314ae5225b592ed87.json  query-0411ef36ab03892ea4fcf4bb8e7ac1a75139bf9937a76d542e0fc3361fe156d1.json  query-0519d0d7c6d97ffbff763ba2d1c85b2bc796c64f42f15f078a5639f717aa21b9.json  query-0a18d6fc5b51dc801d8e674590b2d609e107196eca233278f827f11c242b6e38.json  query-0a9a3184f02328c15c2928ab6a39bc6167fe80a2e7eae6c06390b92538347e33.json  query-0eed3c807b61381f067354bf1f573587610f5e01e75b3d205401623af7a94d65.json  query-181036cd0f64802504fe5025f18b076dc43adb58d626d76818d73fc3a762ba91.json  query-1ed87bd1d14f9c1febbb2a2a2d11eb3d413d28283d97c0b9bfca6f4ca3c80256.json  query-1ee95124185a80b20fffcc2ca64084ef1440d4a166a1296bedf9529395272486.json  query-20cc5dba1dbe11790912ff32e24a757ad86edfe06094087b2654c9428a2469d6.json  query-25e42d6a179e920a58a6034b724700f96676190fca5b0a7e11eb036e523e33d5.json  query-270c2e5479f104bdb52357cedb9813b6e0ebb2708fe344fd8c3914bb5971d914.json  query-27c67f136d2f37a916b0bfb8d4966304005a571cd8871cc84b2010315c7d9692.json  query-2894a3bf8b4f43496a3a1532ba1e630726cf78d354b586094b1ee8c16a6fe9ee.json  query-2b55fed2c473a9b2b249d9afcaff2d290c453d70fb12bf4eb4f099f099f29aa4.json  query-343cc93a2b99bed5e20d46ce54eba34475ebf9db478c8c1debeed64552bb6fd7.json  query-358511533c7ab481f97ffdf9bdbdcef430294ba0e874ab1706115541f68828d1.json  query-3a9e0f2e4c810e63811251c2da5a387a44c47030bcac9aba859ed5080dcc165e.json  query-3c81951bc3ef36210fce1b2bc89dc7dd76adc19d954d73ca8c2d031813307aa2.json  query-3e911a3e12f4d239c0d1a3185c7f54d36ff0819639c15a2e70d32dce65a39803.json  query-413daf884b398b94a5c9731618c780ef48dc808cdb2fe71ab1e9ed2c2ffcb3a6.json  query-4250be7721057fee9a8fdbb9ab083bb2398a64b23eed89a0746badb07eb73b1a.json  query-4289772ae34ff1b1fe1c212bd8a8a49bc08edb530ebcb8a967747c881af4b5f5.json  query-4a624bdb7a8320e4cb18a9e955bfd7ab3f67d6d97529d862ba75dd01e6544f81.json  query-4ad2b61d2fa7a7edc9ec5ec68eaed41b993407ae32bf0e90fbdd2c8ca3ea9d22.json  query-5687bf51d606c491a75a05ffed72bd71dcb15053d899b6a8cd6cc75327d52bff.json  query-58d1a6eafbfe3aaf8836459f8a9d7633e0e322cb3895d7bcf347f35bf30169c7.json  query-5e73a555131f87c514751236ad5ca08ae8f9144fed83971c3b1190ace209a9f5.json  query-6589899a5fb9ef87d704598a7ab741860b8b7658980ce348fadb9bf03e3cce03.json  query-6b9a4fc83126ec8a512b825b3183cb5d8e3e4d1fcff129d2fbc897d3cd64c971.json  query-6bc0d557eeaf39e217f8cb77b446ff825e406eb44887480cb36801b054ed9051.json  query-6be04be9bbf53814144d17355ba47ba12f948e60e815ad917846d7ff6733245a.json  query-6c237ee29dee664dabe8175e9d81add4ca9ea87043d8444d6db938a83f400f54.json  query-74a8ad8da9121d864db3b38a0df52082349b104f6f50382325d4291ab10f3b82.json  query-75645a63e093cdaadb0ba84844e6299e3e19eee7b530be498c609e6cd6fc2b33.json  query-79c07336d3e245d46e7e07e0e32e092e6de4a4e3189c0d86735f030bbb0a60b3.json  query-7a9ffa7b59f3550e2bd38c756b9cc3566512dc2273dc3b72ba1ba5c2d281aeb9.json  query-7d171a79184b68e491ed200d347d6b412b621e2cc3a5b63481643d7e90d05566.json  query-87c39e971df622c0ae622e37563aab11bb4b6634b7e6d9420097ec25faea4d8c.json  (+43 more)
docker/: sync-static.sh
docs/: dev_setup.md
migrations/: 20260702171247_semver_compare_switch_to_bigint.up.sql  20260718120021_add_managed_download_link.down.sql  (+1 more)
src/: config.rs  logging.rs  main.rs  (+4 more)
(+59 files in other folders)
