[package]
name = "geode-index"
version = "0.54.1"
edition = "2024"

[dependencies]
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
actix-multipart = "0.8"
actix-web = "4.10"
anyhow = "1.0"
dotenvy = "0.15"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "uuid",
    "ipnetwork",
] }
tokio = { version = "1.44", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "rustls", "query"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
zip = "8.6.0"
# Required for zip crate to compile properly
lzma-rust2 = "0.16.5"
sha256 = "1.5"
semver = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
chrono = { version = "0.4", features = ["default", "serde"] }
actix-cors = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-actix-web = "0.7"
thiserror = "2.0.12"
moka = { version = "0.12.13", features = ["future"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive"] }
bytes = "1.11"
ammonia = "4"
actix-files = { version = "0.6", optional = true }

[features]
dev-tools = ["dep:actix-files"]
