[package]
name = "geode-index"
version = "0.56.1"
edition = "2024"

[features]
dev-tools = ["dep:actix-files"]

[dependencies]
actix-cors = "0.7"
actix-files = { version = "0.6", optional = true }
actix-multipart = "0.8"
actix-web = "4.10"
ammonia = "4"
anyhow = "1.0"
bytes = "1.11"
chrono = { version = "0.4", features = ["default", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
# Required for zip crate to compile properly
lzma-rust2 = "0.16.5"
moka = { version = "0.12.13", features = ["future"] }
regex = "1.10"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "gzip",
  "rustls",
  "query",
  "http2"
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5"
sqlx = { version = "0.9", features = [
  "postgres",
  "runtime-tokio",
  "chrono",
  "uuid",
  "ipnetwork",
] }
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.20.0", features = ["derive"] }
zip = "8.6.0"
# have to do this until https://github.com/durch/rust-s3/pull/452 is merged :(
rust-s3 = { git = "https://github.com/w4nderlust/rust-s3", rev = "2936eb7", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.52"
